--- a/width.css
+++ b/width.css
@@ -4,28 +4,41 @@
 }
 
 body{
-    height: 95vh;
-    background: #34e7e4;
-    font-family: sans-serif;
-    text-align: center;
-    color: white;
-    font-size: 30px;
+    margin: 0;
+    padding: 0;
+    line-height: 1.6;
+    word-spacing: 1.4px;
+    font-family: "Roboto", sans-serif;
+    color: black;
+    background-color: #34e7e4;
     display: flex;
-    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 
-.main{
-    width: fit-content;
-}
-
-.right{
-    width: min-content;
-}
-
-.left{
-    width: max-content;
+.content{
+    background-color: white;
+    padding: 2em;
+    height: 300px;
+    margin: 0 auto;
+    border: 10px black;
+    box-shadow: 0 0 3em rgba(0, 0, 0, 0.427);
+    width: 70%;
+    height: auto;
 }
 
 header{
-    width: auto;
+    color: red;
+    font-size: xx-large;
+    font-weight: 900;
+    font-size: clamp(2rem, 5vw, 5rem);
 }
+
+p{
+    background: yellow;
+    /* font-size: calc(1vw + 0.5rem); */
+    /* width: clamp(200px, 40%, 20rem); */
+    font-size: clamp(1rem, 1.5vw, 1.25rem);
+}
+
